# mnemonic-secret

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  MIGRATION.md  README.md  cycle-prep-recon-mnem-language-hint.md  cycle-prep-recon-theme-d-kofn-cycle2.md
.github/workflows/: fuzz-smoke.yml  man-release.yml  rust.yml  vendor-freshness.yml
ci/repro/: vendor-freshness.sh
crates/ms-cli/: Cargo.toml  README.md
crates/ms-cli/src/: advisory.rs  bip39_friendly.rs  codex32_friendly.rs  error.rs  format.rs  language.rs  main.rs  mlock.rs  parse.rs  process_hardening.rs
crates/ms-cli/src/cmd/: combine.rs  decode.rs  derive.rs  encode.rs  gen_man.rs  gui_schema.rs  inspect.rs  mod.rs  payload_lang.rs  repair.rs  split.rs  vectors.rs  verify.rs
crates/ms-cli/tests/: back_typed_chunked_form_decodes.rs  cli_combine.rs  cli_derive.rs  cli_help_pointer.rs  cli_output_class.rs  cli_repair.rs  cli_split.rs  combine_entropy_language_advisory.rs  decode_default_english_in_stdout.rs  decode_explicit_language_no_warning.rs  decode_grouped.rs  decode_mnem_japanese.rs  decode_rejects_threshold_not_zero.rs  decode_rejects_unknown_tag.rs  decode_round_trip.rs  decode_routes_share_to_is_share_not_single_string.rs  decode_uppercase.rs  derive_mnem_non_english.rs  encode_arg_group_violations.rs  encode_canonical_12_word.rs  encode_canonical_24_word.rs  encode_emits_passphrase_warning.rs  encode_grouping_flags.rs  encode_hex_input.rs  encode_mnem_japanese.rs  encode_no_engraving_card.rs  encode_output_unchanged_after_split_refactor.rs  encode_pipe_to_decode.rs  encode_pipe_to_verify.rs  encode_rejects_bad_checksum.rs  encode_rejects_bad_language.rs  encode_rejects_odd_length_hex.rs  exit_codes_table.rs  gen_man.rs  gui_schema_emits_spec_v7_json.rs  inspect_codex32_parse_failure.rs  inspect_mnem_string.rs  inspect_multiple_failures.rs  inspect_non_zero_prefix.rs  inspect_reserved_tag.rs  (+14 more)
crates/ms-codec/: CHANGELOG.md  Cargo.toml  README.md
crates/ms-codec/src/: bch.rs  bch_decode.rs  consts.rs  decode.rs  encode.rs  envelope.rs  error.rs  inspect.rs  lib.rs  payload.rs  shares.rs  tag.rs
crates/ms-codec/src/codex32/: mod.rs
crates/ms-codec/tests/: bch_decode.rs  bip39_integration.rs  bip93_cross_format.rs  bip93_inline_vectors.rs  codex32_zeroize_debug.rs  forward_compat.rs  lint_zeroize_discipline.rs  mnem.rs  mnem_byte_aligned_lengths.rs  negative.rs  parity_smoke.rs  spike_kofn.rs  uppercase_envelope.rs
crates/ms-codec/tests/vectors/: v0.1.json
design/: BRAINSTORM_error_display_no_echo.md  BRAINSTORM_ms_v0_1.md  BUG_decode_with_correction_length_divergence.md  FOLLOWUPS.md  IMPLEMENTATION_PLAN_ms_cli_v0_1.md  IMPLEMENTATION_PLAN_ms_derive.md  IMPLEMENTATION_PLAN_ms_mnem_wordlist_language.md  IMPLEMENTATION_PLAN_ms_v0_1.md  IMPLEMENTATION_PLAN_ms_v0_2_kofn.md  PLAN_combine_entr_length_validation.md  PLAN_decode_with_correction_char_boundary_fix.md  PLAN_ms1_envelope_uppercase.md  RELEASE_PROCESS.md  SESSION_HANDOFF_ms_v0_1_pre_spec.md  SPEC_cycleB_codex32_vendor_fork.md  SPEC_ms_cli_v0_1.md  SPEC_ms_codec_test_hardening.md  SPEC_ms_derive.md  SPEC_ms_mnem_wordlist_language.md  SPEC_ms_v0_1.md  SPEC_ms_v0_2_kofn.md  SPEC_test_hardening_T1_ms_funds_safety.md  SPEC_wave2_secret_hygiene_ms.md  SPEC_wave3_ms_codec_ci.md  display-grouping-vectors.tsv.sha256
design/agent-reports/: README.md  audit-ms-codec-v0_1_0-pre-cli.md  combine-entr-length-plan-r0-round1-review.md  combine-entr-length-plan-r0-round2-review.md  cycle-c-fuzzing-impl-ms-round1-review.md  cycleB-codex32-r0-review.md  decode-char-boundary-fix-mini-r0-round1-review.md  error-no-echo-impl-round1-review.md  error-no-echo-r0-round1-review.md  error-no-echo-r0-round2-review.md  ms-bch-fix-R0-review.md  ms-bch-fix-final-review.md  ms-derive-end-of-cycle-R0-review.md  ms-derive-end-of-cycle-R1-review.md  ms-derive-plan-R0-review.md  ms-derive-plan-R1-review.md  ms-derive-spec-R0-review.md  ms-derive-spec-R1-review.md  ms-kofn-design-review.md  ms-kofn-phase-1-R0-review.md  ms-kofn-phase-2-R0-review.md  ms-kofn-plan-R0-review.md  ms-kofn-plan-R1-review.md  ms-kofn-plan-R2-review.md  ms-kofn-spec-R0-review.md  ms-mnem-end-of-cycle-R0-review.md  ms-mnem-end-of-cycle-R1-review.md  ms-mnem-end-of-cycle-R2-review.md  ms-mnem-phase-1-R0-review.md  ms-mnem-phase-2-R0-review.md  ms-mnem-phase-3-design-R0-review.md  ms-mnem-phase-3-design-R1-review.md  ms-mnem-phase-3-design-R2-review.md  ms-mnem-phase-3-design-R3-review.md  ms-mnem-plan-R0-review.md  ms-mnem-plan-R1-review.md  ms-mnem-plan-R2-review.md  ms-mnem-spec-R0-review.md  ms-mnem-spec-R1-review.md  ms-test-hardening-spec-R0-review.md  (+18 more)
docs/: verify-reproducibility.md
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/corpus/ms1_combine/: entr16_2of2.shares  entr16_2of3.shares  entr32_3of5.shares  mnem16_2of3.shares
fuzz/corpus/ms1_decode/: entr16.ms1  entr20.ms1  entr24.ms1  entr28.ms1  entr32.ms1  mnem16_lang1.ms1  mnem32_lang0.ms1
fuzz/corpus/ms1_no_secret_leak/: share2_pos3_caseflip.sel
fuzz/dictionaries/: bech32.dict
fuzz/fuzz_targets/: ms1_combine.rs  ms1_decode.rs  ms1_no_secret_leak.rs
fuzz/tests/: gen_corpus.rs
