[workspace]
members = ["crates/ms-codec", "crates/ms-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Unlicense"
repository = "https://github.com/bg002h/mnemonic-secret"
homepage = "https://github.com/bg002h/mnemonic-secret"
rust-version = "1.85"

[workspace.dependencies]
codex32 = "=0.1.0"
