# ms-codec fuzz workspace — ms phase of the constellation stress-fuzz program
# (Cycle C). This is an OWN `[workspace]` so the repo root's
# `cargo test --workspace` / `cargo fmt --all` / `cargo clippy --workspace`
# completely ignore it (verified by R0). NO-BUMP: infra + tests only, zero
# changes to crates/ms-codec/src/.
#
# Mirrors the md phase's fuzz workspace (descriptor-mnemonic/fuzz). ms-codec is
# edition 2021; this fuzz package is edition 2024 (its own package, independent
# of the codec edition — same choice the md fuzz crate made).
[package]
name = "ms-codec-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.85"

[package.metadata]
cargo-fuzz = true

# Own workspace so the root workspace never sees this crate.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ms-codec]
path = "../crates/ms-codec"

[profile.release]
debug = 1

# cargo-fuzz auto-discovers fuzz_targets/*.rs, but declaring each [[bin]]
# explicitly with test/doc off keeps `cargo build`/`cargo test` in this
# workspace from trying to build them as ordinary binaries.
[[bin]]
name = "ms1_decode"
path = "fuzz_targets/ms1_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ms1_combine"
path = "fuzz_targets/ms1_combine.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ms1_no_secret_leak"
path = "fuzz_targets/ms1_no_secret_leak.rs"
test = false
doc = false
bench = false
