# placeholder — ms-cli is reserved for v0.x; do not remove from workspace.
# The `ms` binary will be implemented after ms-codec v0.1 ships, per
# the staged plan in /home/bcg/.claude/plans/c-ultimately-what-we-quirky-avalanche.md.
[package]
name = "ms-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ms"
path = "src/main.rs"

[dependencies]
ms-codec = { path = "../ms-codec", version = "=0.1.0" }
bip39 = { version = "2", features = ["all-languages"] }
clap = { version = "4", features = ["derive"] }
codex32 = { workspace = true }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
codex32 = { workspace = true }
