[package]
name = "ms-cli"
version = "0.5.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Companion CLI for ms-codec — engrave-friendly BIP-39 entropy backups (the ms1 format)."
documentation = "https://docs.rs/ms-cli"
readme = "README.md"
keywords = ["bitcoin", "codex32", "bip93", "bip39", "engraving"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[[bin]]
name = "ms"
path = "src/main.rs"

[dependencies]
ms-codec = { path = "../ms-codec", version = "=0.2.1" }
bip39 = { version = "2", features = ["all-languages"] }
bitcoin = "0.32"
clap = { version = "4", features = ["derive"] }
codex32 = { workspace = true }
hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
# codex32 is a runtime dep (above) — accessible to tests transitively. No
# separate dev-dep entry needed.
