[package]
name = "ms-codec"
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Reference implementation of the ms1 (HRP `ms`) backup format — BIP-93 codex32 directly applied to secret material (BIP-39 entropy, BIP-32 master seed, xpriv)."
documentation = "https://docs.rs/ms-codec"
readme = "README.md"
keywords = ["bitcoin", "codex32", "bip93", "backup", "engraving"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# codex32 is vendored inline at src/codex32/ (Cycle-B, shape A; CC0-1.0) — no
# external dep. Re-exported as `ms_codec::codex32::`.
getrandom = "0.3"
# `derive` feature: vendored `Codex32String` derives `zeroize::ZeroizeOnDrop`
# (Cycle-B P2) to scrub its inner secret String on drop.
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
proptest = "1"
bip39 = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1.8"
